--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-.cache/
-.python-environments/
-auto-save-list/
-elpa/
-flycheck_init.el
-transient/
+# ignore everything by default
+*
+
+# except
+!init.el
+!.gitignore
